All the way through section 5.

--- a/css/style.css
+++ b/css/style.css
@@ -21,7 +21,7 @@ body {
   background-position: center;
   background-size: cover;
   position: relative;
-  height: 200vh;
+  height: 170vh;
   overflow: auto;
 }
 
@@ -326,6 +326,7 @@ body {
   background-position: center;
   background-size: cover;
   width: 100%;
+  height: 100%;
 }
 
 .black-square h1 {
@@ -429,7 +430,6 @@ body {
   position: absolute;
   left: 730px;
   margin-top: 30px;
-  margin-bottom: 0;
 }
 
 .purple-rectangle h4 {
@@ -462,43 +462,51 @@ body {
 }
 .row {
   display:block;
+  margin: auto;
 }
 .cell {
   display:inline-block;
   position: relative;
-  margin-top: 530px;
+  margin-top: 525px;
   margin-left: 950px;
   font-size: 20px;
-  line-height: 1.25;
+  line-height: 1.5;
 }
 
 .cell p {
   color: black;
-  width: 115px;
-  text-align: left;
-  padding: 0 5px 0 10px;
+  width: 120px;
+  text-align: center;
+  padding: 0 15px 0 10px;
 }
 
-.top-line {
-  margin: auto;
-}
-
-.section-5 {
-  background-image: url("css/assets/assets_0005s_0002s_0000_Layer-18.png");
-  background-position: center;
-  position: relative;
-  margin-top: 270px;
-  transform: rotateZ(1px);
-}
 .section-5 img {
-  height: 100%;
-  width: 1200px;
+  background-position: center;
+  background-repeat: no-repeat;
+  margin-top: -1300px;
 }
 
 .section-5 h1 {
   color: black;
   font-size: 74px;
-  position: absolute;
+  font-weight: lighter;
   margin: auto;
+}
 
+.section-5 p {
+  color: black;
+  font-size: 40px;
+  font-weight: lighter;
+  height: fit-content;
+  letter-spacing: .10em;
+}
+
+.global {
+  height: fit-content;
+  width: fit-content;
+  position: relative;
+  margin-top: 1300px;
+  margin-bottom: -180px;
+  margin-left: 400px;
+  width: 1000px;
 }
