--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,10 @@
 /* General Rules */
+
+.body-wrapper {
+  width: 1920px;
+  height: 1696px;
+}
+
 body {
   margin: 0;
   padding: 0;
@@ -13,7 +19,6 @@ body {
   font-weight: normal;
   font-style: normal;
 }
-
 /* Section 1 */
 
 .header {
@@ -22,7 +27,6 @@ body {
   background-size: cover;
   position: relative;
   height: 170vh;
-  overflow: auto;
 }
 
 /* Section 1: Logo and nav bar */
@@ -481,23 +485,31 @@ body {
   padding: 0 15px 0 10px;
 }
 
-.section-5 img {
-  background-image: url("../css/assets/assets_0005s_0002s_0000_Layer-18.png");
+.section-5 {
+  background: #ffffff url("assets/assets_0005s_0002s_0000_Layer-18.png") no-repeat right top;
   background-position: center;
   background-size: cover;
-  height: 155vh;
   position: absolute;
-  padding-top: 10px;
+  width: 100%;
+  height: 270vh;
   color: black;
   margin: 0;
   padding: 0;
+  z-index: -3;
+}
+
+.global {
+  position: relative;
+  width: 1000px;
+  margin: auto;
+  margin-top: 870px;
 }
 
 .section-5 h1 {
   color: black;
   font-size: 74px;
   font-weight: lighter;
-  margin: auto;
+  margin-bottom: 0;
 }
 
 .section-5 p {
@@ -508,22 +520,53 @@ body {
   letter-spacing: .10em;
 }
 
-.global {
-  height: fit-content;
-  width: fit-content;
-  position: relative;
-  margin-top: 1300px;
-  margin-bottom: -180px;
-  margin-left: 400px;
-  width: 1000px;
+
+.vertical-line {
+  margin: auto;
+  margin-top: 100px;
 }
 
-
-.section-5.customers p {
+.section-5 h5 {
   color: black;
   font-size: 24px;
-  font-family: 'Poppins': sans-serif;
+  font-family: 'Poppins';
   line-height: 2;
-  position: relative;
-  height: 400px;
+  margin: auto;
+  margin-top: 100px;
+  text-transform: none;
+}
+
+.testimonial-container {
+  margin: auto;
+  display: inline;
+}
+
+.test-box.one {
+  border: 1px solid white;
+  background-color: white;
+  background-size: contain;
+  font-size: 18px;
+  font-family: 'Georgia';
+  text-align: center;
+  margin: auto;
+}
+
+.test-box.second {
+  border: 1px solid white;
+  background-color: rgb(105, 79, 202);
+  background-size: cover;
+  font-size: 18px;
+  font-family: 'Georgia';
+  text-align: center;
+  margin: auto;
+}
+
+.test-box.third {
+  border: 1px solid white;
+  background-color: white;
+  background-size: cover;
+  font-size: 18px;
+  font-family: 'Georgia';
+  text-align: center;
+  margin: auto;
 }
