Everything here is good, but I'm about to add more font icons I didn't realize I needed, so I'm committing in case I screw it up.

--- a/css/styles.css
+++ b/css/styles.css
@@ -6,6 +6,7 @@
   background-color: rgb(54, 54, 54);
 }
 
+
 .icon-search {
   color: #919191;
   font-size: 20px;
@@ -36,4 +37,12 @@
 
 .row.page-bottom {
   background-color: rgb(49, 49, 49);
+}
+
+.whole-page {
+  background-color: rgb(54, 54, 54);
+}
+
+.log-in-box, .language-box {
+  border-radius: 0px;
 }
