--- a/css/fontello.css
+++ b/css/fontello.css
@@ -1,11 +1,11 @@
 @font-face {
   font-family: 'fontello';
-  src: url('../font/fontello.eot?11827378');
-  src: url('../font/fontello.eot?11827378#iefix') format('embedded-opentype'),
-       url('../font/fontello.woff2?11827378') format('woff2'),
-       url('../fonts/fontello.woff?11827378') format('woff'),
-       url('../font/fontello.ttf?11827378') format('truetype'),
-       url('../font/fontello.svg?11827378#fontello') format('svg');
+  src: url('../font/fontello.eot?75590458');
+  src: url('../font/fontello.eot?75590458#iefix') format('embedded-opentype'),
+       url('../font/fontello.woff2?75590458') format('woff2'),
+       url('../fonts/fontello.woff?75590458') format('woff'),
+       url('../font/fontello.ttf?75590458') format('truetype'),
+       url('../font/fontello.svg?75590458#fontello') format('svg');
   font-weight: normal;
   font-style: normal;
 }
@@ -15,7 +15,7 @@
 @media screen and (-webkit-min-device-pixel-ratio:0) {
   @font-face {
     font-family: 'fontello';
-    src: url('../font/fontello.svg?11827378#fontello') format('svg');
+    src: url('../font/fontello.svg?75590458#fontello') format('svg');
   }
 }
 */
@@ -98,6 +98,14 @@
 .icon-compass-outline-1:before { content: '\e828'; } /* '' */
 .icon-earth-(1):before { content: '\e829'; } /* '' */
 .icon-wallet-travel-1:before { content: '\e82a'; } /* '' */
+.icon-right-open:before { content: '\e82b'; } /* '' */
+.icon-left-open:before { content: '\e82c'; } /* '' */
+.icon-up-open:before { content: '\e82d'; } /* '' */
+.icon-down-open:before { content: '\e82e'; } /* '' */
+.icon-down-dir:before { content: '\e82f'; } /* '' */
+.icon-left-dir:before { content: '\e830'; } /* '' */
+.icon-right-dir:before { content: '\e831'; } /* '' */
+.icon-up-dir:before { content: '\e832'; } /* '' */
 .icon-swimming:before { content: '\e838'; } /* '' */
 .icon-chat-empty:before { content: '\f0e6'; } /* '' */
 .icon-hospital:before { content: '\f0f8'; } /* '' */
